@@ -11,6 +11,7 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.lang.NonNull;
 import org.springframework.transaction.TransactionStatus;
 import org.springframework.transaction.support.TransactionCallback;
 import org.springframework.transaction.support.TransactionTemplate;
@@ -61,14 +62,14 @@ public class SecteurServicesPerformancesTestCriteria extends AbstractTest{
 
 		transactionTemplate.execute(new TransactionCallback<Object>() {
 
-			public Object doInTransaction(TransactionStatus arg0) {
+			public Object doInTransaction(@NonNull TransactionStatus arg0) {
 
 				Secteur secteur = secteurDAO.findByCodeNaf("1104Z");
 
-				assertEquals(new Double(468),
+				assertEquals(Double.valueOf(468),
 						secteur.getIndicesAnnuels().get(Year.parse("2016")).getValeur(), "L'indice annuel de 2016 doit valoir 1170");
 
-				assertEquals(new Double(72),
+				assertEquals(Double.valueOf(72),
 						secteur.getIndicesMensuels().get(YearMonth.of(2016, Month.DECEMBER)).getValeur(), "L'indice mensuel de décembre 2016 doit valoir 180");
 
 				return null;
