@@ -8,7 +8,6 @@ import java.time.Year;
 import java.time.YearMonth;
 import java.time.ZoneId;
 import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
 
@@ -203,7 +202,7 @@ public class JeuxTestUtil {
 				declaration.setDate(
 						Date.from(YearMonth.of(2016, month).atDay(1).atStartOfDay(ZoneId.systemDefault()).toInstant()));
 
-				declaration.setMontant(new Double(month.getValue() * compteur));
+				declaration.setMontant(Double.valueOf(month.getValue() * compteur));
 
 				entreprise.addDeclaration(declaration);
 
